<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user_profile">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/background_tool_bar">

        <TextView
                android:id="@+id/titleUserProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_user_profile"
                android:textColor="@color/text_on_surface"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"/>

        <ImageView
                android:id="@+id/btnBack"
                android:layout_width="34dp"
                android:layout_height="32dp"
                android:src="@drawable/baseline_arrow_back_return_24"
                android:contentDescription="@string/back_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:id="@+id/profileContentLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/background_primary"
            android:padding="32dp"
            app:layout_constraintTop_toBottomOf="@id/headerContainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:id="@+id/profileImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/baseline_person_24"
                android:contentDescription="@string/desc_profile_picture"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                android:background="@drawable/circle_background"
                android:padding="4dp"/>

        <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp"
                android:textColor="@color/text_on_background"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:textStyle="bold"/>

        <!-- Username/Name Field -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/input_username"
                app:errorEnabled="true"
                app:errorTextColor="@android:color/holo_red_dark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextColor="@color/input_hint_color"
                app:boxStrokeColor="@color/input_stroke_color"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Field -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:hint="@string/input_password"
                app:errorEnabled="true"
                app:errorTextColor="@android:color/holo_red_dark"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextColor="@color/input_hint_color"
                app:boxStrokeColor="@color/input_stroke_color"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="16sp"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdateProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_save_profile"
                android:backgroundTint="@color/btn_login"
                android:textColor="@color/white"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>